--- a/quimica.css
+++ b/quimica.css
@@ -1,38 +1,33 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-body{
-    font-family: arial, sans-serif;
-    background-color: brown;
-    font-size: 1rem
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f9;
+  font-size: 1rem;
 }
-
 header {
-background-color: aqua;
-padding: 20px 40px;
-width: 100%;
+  background-color: #2c3e50;
+  padding: 20px 40px;
+  width: 100%;
 }
-
 .menus {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
-
-.lista-vertical ul
-.lista-horizontal ul {
-    display: flex;
-    gap: 20px;
-    list-style: none;
+.menu__externo ul,
+.menu__interno ul {
+  display: flex;
+  gap: 20px;
+  list-style: none;
 }
-
-.lista-vertical li a,
-.lista-horizontal li a {
-color: aquamarine;
-text-decoration: none;
-font-size: 1.25px;
-padding: 10px 15px;
-border-radius: 5px;
+.menu__externo li a,
+.menu__interno li a {
+  color: #ecf0f1;
+  text-decoration: none;
+  font-size: 1.25rem;
+  padding: 10px 15px;
+  border-radius: 5px;
 }
