--- a/quimica.css
+++ b/quimica.css
@@ -5,11 +5,11 @@
 }
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f9;
+  background-color: #3f3fdd;
   font-size: 1rem;
 }
 header {
-  background-color: #2c3e50;
+  background-color: #cebc1b;
   padding: 20px 40px;
   width: 100%;
 }
