--- a/quimica.css
+++ b/quimica.css
@@ -5,7 +5,7 @@
 }
 body {
   font-family: Arial, sans-serif;
-  background-color: #3f3fdd;
+  background-color: #b2dfa7;
   font-size: 1rem;
 }
 header {
