--- a/quimica.css
+++ b/quimica.css
@@ -9,7 +9,7 @@ body {
   font-size: 1rem;
 }
 header {
-  background-color: #cebc1b;
+  background-color: #0b520f;
   padding: 20px 40px;
   width: 100%;
 }
