--- a/quimica.css
+++ b/quimica.css
@@ -32,6 +32,11 @@ header {
   border-radius: 5px;
 }
 
+main {
+    margin: 40px auto;
+    padding: 20px;
+}
+
 h1 {
     text-align: center;
     color: var(--preto);
