--- a/quimica.css
+++ b/quimica.css
@@ -5,11 +5,11 @@
 }
 body {
   font-family: Arial, sans-serif;
-  background-color: #b2dfa7;
+  background-color: #f8ffe5;
   font-size: 1rem;
 }
 header {
-  background-color: #0b520f;
+  background-color: #121e0f;
   padding: 20px 40px;
   width: 100%;
 }
