--- a/quimica.css
+++ b/quimica.css
@@ -5,7 +5,7 @@
 }
 body {
   font-family: Arial, sans-serif;
-  background-color: #f8ffe5;
+  background-color: #cbdeba;
   font-size: 1rem;
 }
 header {
