--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,11 @@
 
 :root {
   --preto: #000000;
-  --marinho: #493d9e;
+  --marinho: #112718;
   --amarelo-claro: #fff2af;
-  --roxo-claro: #b2a5ff;
+  --roxo-claro: #578a51;
   --verde: #99bc85;
-  --azul-claro: #e4efe7;
+  --azul-claro: #77fc9b;
   --branco: #ffffff;
   --marron-claro: #faf1e6;
 }
