--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,11 @@
 :root {
   --preto: #000000;
   --marinho: #112718;
-  --amarelo-claro: #fff2af;
+  --amarelo-claro: #517720;
   --roxo-claro: #578a51;
   --verde: #99bc85;
-  --azul-claro: #77fc9b;
-  --branco: #ffffff;
+  --azul-claro: #5aa148;
+  --branco: #070606;
   --marron-claro: #faf1e6;
 }
 
