--- a/quimica.css
+++ b/quimica.css
@@ -6,11 +6,11 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f0f2bd;
+  background-color: #99bc85;
 }
 
 header {
-  background-color: #2c3e50;
+  background-color: #112718;
   padding: 20px 40px;
   width: 100%;
 }
@@ -47,7 +47,7 @@ header {
 
 .menu_externo li a:hover,
 .menu_interno li a:hover {
-  background-color: #3498db;
+  background-color: #1a5212;
   transform: translateY(-2px);
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
 }
