--- a/quimica.css
+++ b/quimica.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #99bc85;
+  background-color: #7ed84a;
 }
 
 header {
@@ -76,7 +76,7 @@ main {
 }
 
 footer {
-  background-color: #2c3e50;
+  background-color: #112718;
   color: #ecf0f1;
   text-align: center;
   padding: 20px;
