--- a/quimica.css
+++ b/quimica.css
@@ -35,7 +35,7 @@ header {
 
 .menu_externo li a,
 .menu_interno li a {
-  color: #ecf0f1;
+  color: #223b18;
   text-decoration: none;
   font-size: 18px;
   padding: 10px 15px;
