--- a/quimica.css
+++ b/quimica.css
@@ -60,7 +60,7 @@ header {
   left: 0;
   width: 0;
   height: 2px;
-  background-color: #ecf0f1;
+  background-color: #135022;
   transition: width 0.3s ease;
 }
 
