--- a/fisica.css
+++ b/fisica.css
@@ -6,11 +6,11 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f0f2bd;
+  background-color: #7ed84a;
 }
 
 header {
-  background-color: #2c3e50;
+  background-color: #112718;
   padding: 20px 40px;
   width: 100%;
 }
@@ -35,7 +35,7 @@ header {
 
 .menu_externo li a,
 .menu_interno li a {
-  color: #ecf0f1;
+  color: #223b18;
   text-decoration: none;
   font-size: 18px;
   padding: 10px 15px;
@@ -47,7 +47,7 @@ header {
 
 .menu_externo li a:hover,
 .menu_interno li a:hover {
-  background-color: #3498db;
+  background-color: #1a5212;
   transform: translateY(-2px);
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
 }
@@ -60,7 +60,7 @@ header {
   left: 0;
   width: 0;
   height: 2px;
-  background-color: #ecf0f1;
+  background-color: #135022;
   transition: width 0.3s ease;
 }
 
@@ -76,7 +76,7 @@ main {
 }
 
 footer {
-  background-color: #2c3e50;
+  background-color: #112718;
   color: #ecf0f1;
   text-align: center;
   padding: 20px;
@@ -152,15 +152,15 @@ footer {
 }
 
 .atividades .card {
-  border-left: 4px solid #71c0bb;
+  border-left: 4px solid #000000;
 }
 
 .laboratorio .card {
-  border-left: 4px solid #4e6688;
+  border-left: 4px solid #000000;
 }
 
 .provas .card {
-  border-left: 4px solid #332d56;
+  border-left: 4px solid #000000;
 }
 
 @media (max-width: 768px) {
